Update code style.