@@ -23,11 +23,6 @@ package xyz.kvantum.server.implementation;
 
 import com.beust.jcommander.JCommander;
 import com.beust.jcommander.Parameter;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.InputStreamReader;
-import java.util.Locale;
-import java.util.Optional;
 import xyz.kvantum.server.api.config.CoreConfig;
 import xyz.kvantum.server.api.core.Kvantum;
 import xyz.kvantum.server.api.logging.LogContext;
@@ -36,168 +31,154 @@ import xyz.kvantum.server.api.util.RequestManager;
 import xyz.kvantum.server.api.util.TimeUtil;
 import xyz.kvantum.server.implementation.error.KvantumInitializationException;
 
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.InputStreamReader;
+import java.util.Locale;
+import java.util.Optional;
+
 /**
  * Application entry point
  */
-@SuppressWarnings("ALL") final public class KvantumMain
-{
+@SuppressWarnings("ALL") final public class KvantumMain {
 
-	/**
-	 * Launcher method
-	 *
-	 * @param args Command line arguments
-	 */
-	public static void main(final String[] args) throws Throwable
-	{
-		//
-		// Determine whether or not the server is running with extended
-		// privileges. Not doing this will affect port binding
-		// to the reserved port range.
-		//
-		// This only matters if the server is run on a linux system
-		//
-		final String osName = System.getProperty( "os.name" );
-		if ( osName.toLowerCase( Locale.ENGLISH ).startsWith( "linux" ) )
-		{
-			System.out.println( "Server running on Linux! Checking privileges..." );
+    /**
+     * Launcher method
+     *
+     * @param args Command line arguments
+     */
+    public static void main(final String[] args) throws Throwable {
+        //
+        // Determine whether or not the server is running with extended
+        // privileges. Not doing this will affect port binding
+        // to the reserved port range.
+        //
+        // This only matters if the server is run on a linux system
+        //
+        final String osName = System.getProperty("os.name");
+        if (osName.toLowerCase(Locale.ENGLISH).startsWith("linux")) {
+            System.out.println("Server running on Linux! Checking privileges...");
 
-			boolean isPrivileged = false;
+            boolean isPrivileged = false;
 
-			final Process process = Runtime.getRuntime().exec( new String[] { "id", "-u" } );
-			try ( BufferedReader reader = new BufferedReader( new InputStreamReader( process.getInputStream() ) ) )
-			{
-				String line = reader.readLine();
-				if ( line != null )
-				{
-					isPrivileged = line.equals( "0" );
-				}
-			}
-			process.destroyForcibly();
+            final Process process = Runtime.getRuntime().exec(new String[] {"id", "-u"});
+            try (BufferedReader reader = new BufferedReader(
+                new InputStreamReader(process.getInputStream()))) {
+                String line = reader.readLine();
+                if (line != null) {
+                    isPrivileged = line.equals("0");
+                }
+            }
+            process.destroyForcibly();
 
-			if ( !isPrivileged )
-			{
-				System.out.println( "\nWARNING\n"
-						+ "The server is not privileged, and might therefore not be able to bind to port 80.\n"
-						+ "Not running as a previleged user may also cause complications with file creation. Beware.\n" );
-			}
-		}
+            if (!isPrivileged) {
+                System.out.println("\nWARNING\n"
+                    + "The server is not privileged, and might therefore not be able to bind to port 80.\n"
+                    + "Not running as a previleged user may also cause complications with file creation. Beware.\n");
+            }
+        }
 
-		//
-		// Here we parse command line arguments
-		//
-		final Options options = new Options();
-		final JCommander jCommander = new JCommander( options );
-		jCommander.parse( args );
-		jCommander.setProgramName( "Kvantum" );
+        //
+        // Here we parse command line arguments
+        //
+        final Options options = new Options();
+        final JCommander jCommander = new JCommander(options);
+        jCommander.parse(args);
+        jCommander.setProgramName("Kvantum");
 
-		if ( options.help )
-		{
-			final LogWrapper logWrapper = new DefaultLogWrapper();
-			final StringBuilder message = new StringBuilder();
-			jCommander.usage( message );
+        if (options.help) {
+            final LogWrapper logWrapper = new DefaultLogWrapper();
+            final StringBuilder message = new StringBuilder();
+            jCommander.usage(message);
 
-			logWrapper.log( LogContext.builder().applicationPrefix( "Help" ).logPrefix( "Info" )
-					.timeStamp( TimeUtil.getTimeStamp() ).message( message.toString() ).thread( "main" ).build() );
+            logWrapper.log(LogContext.builder().applicationPrefix("Help").logPrefix("Info")
+                .timeStamp(TimeUtil.getTimeStamp()).message(message.toString()).thread("main")
+                .build());
 
-			System.exit( 0 );
-		} else
-		{
-			String folder = options.folder;
-			if ( folder.isEmpty() )
-			{
-				if ( System.getenv().containsKey( "KVANTUM_HOME" ) )
-				{
-					folder = System.getenv( "KVANTUM_HOME" );
-				} else
-				{
-					folder = "./";
-				}
-			}
+            System.exit(0);
+        } else {
+            String folder = options.folder;
+            if (folder.isEmpty()) {
+                if (System.getenv().containsKey("KVANTUM_HOME")) {
+                    folder = System.getenv("KVANTUM_HOME");
+                } else {
+                    folder = "./";
+                }
+            }
 
-			final File file = new File( folder, "kvantum" );
+            final File file = new File(folder, "kvantum");
 
-			System.out.printf( "INFO%nUsing server folder: %s%n%n", file.getAbsolutePath() );
+            System.out.printf("INFO%nUsing server folder: %s%n%n", file.getAbsolutePath());
 
-			final Optional<Kvantum> server = ServerContext.builder().coreFolder( file ).standalone( true )
-					.logWrapper( new DefaultLogWrapper() ).router( RequestManager.builder().build() )
-					.serverSupplier( StandaloneServer::new ).build().create();
-			if ( server.isPresent() )
-			{
-				if ( !options.debug.isEmpty() )
-				{
-					CoreConfig.debug = true;
-					CoreConfig.verbose = true;
-				}
-				if ( options.port != -1 )
-				{
-					CoreConfig.port = options.port;
-				}
-				try
-				{
-					server.get().start();
-				} catch ( final Exception e )
-				{
-					throw new KvantumInitializationException( "Failed to start the server instance", e );
-				}
-			} else
-			{
-				throw new KvantumInitializationException( "Failed to create a server instance" );
-			}
-		}
-	}
+            final Optional<Kvantum> server =
+                ServerContext.builder().coreFolder(file).standalone(true)
+                    .logWrapper(new DefaultLogWrapper()).router(RequestManager.builder().build())
+                    .serverSupplier(StandaloneServer::new).build().create();
+            if (server.isPresent()) {
+                if (!options.debug.isEmpty()) {
+                    CoreConfig.debug = true;
+                    CoreConfig.verbose = true;
+                }
+                if (options.port != -1) {
+                    CoreConfig.port = options.port;
+                }
+                try {
+                    server.get().start();
+                } catch (final Exception e) {
+                    throw new KvantumInitializationException("Failed to start the server instance",
+                        e);
+                }
+            } else {
+                throw new KvantumInitializationException("Failed to create a server instance");
+            }
+        }
+    }
 
-	public static Optional<? extends Kvantum> start(final File coreFolder)
-	{
-		return start( ServerContext.builder().standalone( false ).coreFolder( coreFolder )
-				.logWrapper( new DefaultLogWrapper() ).router( RequestManager.builder().build() ).build() );
-	}
+    public static Optional<? extends Kvantum> start(final File coreFolder) {
+        return start(ServerContext.builder().standalone(false).coreFolder(coreFolder)
+            .logWrapper(new DefaultLogWrapper()).router(RequestManager.builder().build()).build());
+    }
 
-	public static Optional<? extends Kvantum> start()
-	{
-		return start( new File( "./" ) );
-	}
+    public static Optional<? extends Kvantum> start() {
+        return start(new File("./"));
+    }
 
-	/**
-	 * Create & Start the server
-	 *
-	 * @param standalone If the server should run as a singleton application, or if its embedded as a library
-	 * @param coreFolder The core folder, in which the ".isites" folder is created
-	 * @param wrapper The log wrapper / handler
-	 * @return Optional of nullable server
-	 */
-	public static Optional<? extends Kvantum> start(final ServerContext serverContext)
-	{
-		if ( serverContext == null )
-		{
-			throw new NullPointerException( "Supplied server context cannot be null!" );
-		}
-		Optional<? extends Kvantum> server = serverContext.create();
-		try
-		{
-			if ( server.isPresent() )
-			{
-				server.get().start();
-			}
-		} catch ( final Exception e )
-		{
-			e.printStackTrace();
-		}
-		return server;
-	}
+    /**
+     * Create & Start the server
+     *
+     * @param standalone If the server should run as a singleton application, or if its embedded as a library
+     * @param coreFolder The core folder, in which the ".isites" folder is created
+     * @param wrapper    The log wrapper / handler
+     * @return Optional of nullable server
+     */
+    public static Optional<? extends Kvantum> start(final ServerContext serverContext) {
+        if (serverContext == null) {
+            throw new NullPointerException("Supplied server context cannot be null!");
+        }
+        Optional<? extends Kvantum> server = serverContext.create();
+        try {
+            if (server.isPresent()) {
+                server.get().start();
+            }
+        } catch (final Exception e) {
+            e.printStackTrace();
+        }
+        return server;
+    }
 
-	/**
-	 * Command line arguments
-	 */
-	private static class Options
-	{
+    /**
+     * Command line arguments
+     */
+    private static class Options {
 
-		@Parameter(names = "-folder", description = "Application base folder path") private String folder = "";
+        @Parameter(names = "-folder", description = "Application base folder path") private String
+            folder = "";
 
-		@Parameter(names = "-help", description = "Show this list") private boolean help = false;
+        @Parameter(names = "-help", description = "Show this list") private boolean help = false;
 
-		@Parameter(names = "-port", description = "The server port") private int port = -1;
+        @Parameter(names = "-port", description = "The server port") private int port = -1;
 
-		@Parameter(names = "-debug", description = "Enable debugging") private String debug = "";
+        @Parameter(names = "-debug", description = "Enable debugging") private String debug = "";
 
-	}
+    }
 }
